# xrock_bagel_tools

./: .gitignore  CMakeLists.txt  README.md  manifest.xml
python/: add_to_bagel_db.py  create_mars_config.py  init_parameters_to_graph.py  recreate_info_yml.py
src/: bagel_model_info.cpp  get_unreferenced_models.cpp  list_depending_models.cpp  model_to_bagel.cpp
